src/fi/wiskopdr/expressies/repr/MPReduceParser.java
/* Generated By:JavaCC: Do not edit this line. MPReduceParser.java */
package fi.wiskopdr.expressies.repr;

import java.io.*;
import java.util.*;
import fi.wiskopdr.expressies.*;

public class MPReduceParser implements MPReduceParserConstants {
  static class Interval
  {
     Expressie a,b;
     Interval(Object a, Object b)
     {
       this.a = (Expressie) a;
       this.b = (Expressie) b;
     }
  }
  private static final String INF = "\u221e";
  private static final String LEQ = "\u2264";
  private static final String GEQ = "\u2265";
  private static final String APPROX = "\u2248";
  public static void main(String args []) throws Exception
  {

        String input = "{y = ( - (sqrt(x) + acos(1) ))/log(x**4), y<infinity}$";
        //input = "-x/4 + 1 * pi$";
        input = "{x=(6 .. 7),x >=3,x<=6, x = 123}$";
        input = "limit(a,b,c)$";
        Reader in = new StringReader(input);
    MPReduceParser parser = new MPReduceParser(in);
    Object result = (parser.start());
        System.out.println(result);
  }

  public Interval interval(Object a, Object b)
  {
                return new Interval(a, b);

  }

  final public Object start() throws ParseException {
 Object o;
    o = expr();
    jj_consume_token(DOLLAR);
    jj_consume_token(0);
    {if (true) return o;}
    throw new Error("Missing return statement in function");
  }

  final public Object expr() throws ParseException {
 Object o;
    o = relExpr();
    {if (true) return o;}
    throw new Error("Missing return statement in function");
  }

  final public Object relExpr() throws ParseException {
  Object a, b;
  Token tok;
  String teken = null;
    a = intervalExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case EQ:
    case NEQ:
    case LE:
    case LT:
    case GE:
    case GT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case EQ:
        tok = jj_consume_token(EQ);
        teken = "=";
        break;
      case NEQ:
        tok = jj_consume_token(NEQ);
        break;
      case LE:
        tok = jj_consume_token(LE);
       teken = LEQ;
        break;
      case GE:
        tok = jj_consume_token(GE);
        teken = GEQ;
        break;
      case LT:
        tok = jj_consume_token(LT);
        break;
      case GT:
        tok = jj_consume_token(GT);
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      b = intervalExpr();
      if(teken == null) teken = tok.image;
      if(b instanceof Interval )
      {  Interval bb = (Interval)b;
         b = new Vermenigvuldiging(new BasisExpressie(0),new Optelling(bb.a,bb.b));
         teken = "~";
      }
      a = new Vergelijking( (Expressie) a, (Expressie) b, teken);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
        {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Object intervalExpr() throws ParseException {
  Object o, o2;
    o = addExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTERVAL:
      jj_consume_token(INTERVAL);
      o2 = addExpr();
      o = interval(o, o2);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    {if (true) return o;}
    throw new Error("Missing return statement in function");
  }

  final public Object addExpr() throws ParseException {
        Object a, b;
        Token tok;
    a = multExpr();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MINUS:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        tok = jj_consume_token(PLUS);
        break;
      case MINUS:
        tok = jj_consume_token(MINUS);
        break;
      default:
        jj_la1[4] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      b = multExpr();
                switch(tok.kind)
                {
                        case PLUS : a = new Optelling( (Expressie) a, (Expressie) b); break;
                        case MINUS: a = new Aftrekking( (Expressie) a, (Expressie) b); break;
                }
    }
    {if (true) return a;}
    throw new Error("Missing return statement in function");
  }

  final public Object multExpr() throws ParseException {
 Object o, o2; Token tok;
    o = powerExpr();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
      case DIVIDE:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MULTIPLY:
        tok = jj_consume_token(MULTIPLY);
        break;
      case DIVIDE:
        tok = jj_consume_token(DIVIDE);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      o2 = powerExpr();
                switch(tok.kind)
                {
                  case MULTIPLY: o = new Vermenigvuldiging( (Expressie) o, (Expressie) o2); break;
                  case DIVIDE  : o = new Deling( (Expressie) o, (Expressie) o2); break;
                }
    }
        {if (true) return o;}
    throw new Error("Missing return statement in function");
  }

  final public Object powerExpr() throws ParseException {
 Object o,o2; String tok;
    o = negExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case POWER:
      jj_consume_token(POWER);
        tok = "^";
      o2 = negExpr();
                o = new Macht( (Expressie) o, (Expressie) o2);
      break;
    default:
      jj_la1[7] = jj_gen;
      ;
    }
        {if (true) return o;}
    throw new Error("Missing return statement in function");
  }

  final public Object negExpr() throws ParseException {
 Object o; String tok;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
      jj_consume_token(MINUS);
    tok = "-";
      o = compExpr();
        {if (true) return new Aftrekking(new BasisExpressie(0), (Expressie) o);}
      break;
    case LPAR:
    case LBC:
    case CONSTANT:
    case DECFLOAT:
    case ABS:
    case ACOS:
    case ASIN:
    case ATAN:
    case BIN:
    case CSC:
    case COS:
    case COT:
    case DIFF:
    case E:
    case FAC:
    case INFINITY:
    case INT:
    case LOG:
    case PI:
    case SQRT:
    case SIN:
    case SEC:
    case SUM:
    case TAN:
    case ARBINT:
    case ARBCOMPLEX:
    case LIMIT:
    case ID:
      o = compExpr();
                {if (true) return o;}
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Object compExpr() throws ParseException {
 Object o, arg;
 Vector args;
    o = anchor();
    {if (true) return o;}
    throw new Error("Missing return statement in function");
  }

  final public Object paraExpr() throws ParseException {
 Object o;
    jj_consume_token(LPAR);
    o = expr();
    jj_consume_token(RPAR);
    {if (true) return o;}
    throw new Error("Missing return statement in function");
  }

  final public Object listExpr() throws ParseException {
  Vector v;
    jj_consume_token(LBC);
    v = commalist();
    jj_consume_token(RBC);
    {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  final public Vector commalist() throws ParseException {
  Vector v = new Vector();
  Object o;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case MINUS:
    case LPAR:
    case LBC:
    case CONSTANT:
    case DECFLOAT:
    case ABS:
    case ACOS:
    case ASIN:
    case ATAN:
    case BIN:
    case CSC:
    case COS:
    case COT:
    case DIFF:
    case E:
    case FAC:
    case INFINITY:
    case INT:
    case LOG:
    case PI:
    case SQRT:
    case SIN:
    case SEC:
    case SUM:
    case TAN:
    case ARBINT:
    case ARBCOMPLEX:
    case LIMIT:
    case ID:
      o = expr();
           v.add(o);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case KOMMA:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_3;
        }
        jj_consume_token(KOMMA);
        o = expr();
                    v.add(o);
      }
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
           {if (true) return v;}
    throw new Error("Missing return statement in function");
  }

  final public Object anchor() throws ParseException {
 Object o;
    o = atom();
          {if (true) return o;}
    throw new Error("Missing return statement in function");
  }

  final public String id() throws ParseException {
  Token tok;
    tok = jj_consume_token(ID);
     {if (true) return tok.toString();}
    throw new Error("Missing return statement in function");
  }

  final public Object atom() throws ParseException {
  Token tok;
  String name;
  Object o, o2, o3=null, o4=null;
  Vector args;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LPAR:
      o = paraExpr();
    {if (true) return o;}
      break;
    case LBC:
      o = listExpr();
          {if (true) return o;}
      break;
    case CONSTANT:
      tok = jj_consume_token(CONSTANT);
        {if (true) return new BasisExpressie(tok.toString());}
      break;
    case DECFLOAT:
      tok = jj_consume_token(DECFLOAT);
          {if (true) return new BasisExpressie(tok.toString());}
      break;
    case ABS:
      jj_consume_token(ABS);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(RPAR);
   {if (true) return new Abs( (Expressie) o);}
      break;
    case ACOS:
      jj_consume_token(ACOS);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(RPAR);
   {if (true) return new ArcCosinus( (Expressie) o);}
      break;
    case ASIN:
      jj_consume_token(ASIN);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(RPAR);
   {if (true) return new ArcSinus( (Expressie) o);}
      break;
    case ATAN:
      jj_consume_token(ATAN);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(RPAR);
   {if (true) return new ArcTangens( (Expressie) o);}
      break;
    case BIN:
      jj_consume_token(BIN);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(KOMMA);
      o2 = expr();
      jj_consume_token(RPAR);
  {if (true) return new Bin( (Expressie) o, (Expressie)o2);}
      break;
    case CSC:
      jj_consume_token(CSC);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(RPAR);
  {if (true) return new Cosecans( (Expressie) o );}
      break;
    case COS:
      jj_consume_token(COS);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(RPAR);
  {if (true) return new Cosinus( (Expressie)o );}
      break;
    case COT:
      jj_consume_token(COT);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(RPAR);
  {if (true) return new Cotangens( (Expressie)o );}
      break;
    case DIFF:
      jj_consume_token(DIFF);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(KOMMA);
      o2 = expr();
      jj_consume_token(RPAR);
  {if (true) return new Diff( (Expressie) o, (Expressie) o2);}
      break;
    case E:
      jj_consume_token(E);
  {if (true) return new E();}
      break;
    case FAC:
      jj_consume_token(FAC);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(RPAR);
  {if (true) return new Faculteit( (Expressie) o);}
      break;
    case INFINITY:
      jj_consume_token(INFINITY);
        {if (true) return new BasisExpressie(INF);}
      break;
    case INT:
      jj_consume_token(INT);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(KOMMA);
      o2 = expr();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case KOMMA:
        jj_consume_token(KOMMA);
        o3 = expr();
        jj_consume_token(KOMMA);
        o4 = expr();
        break;
      default:
        jj_la1[11] = jj_gen;
        ;
      }
      jj_consume_token(LPAR);
        if(o3 == null) {if (true) return new Primitieve((Expressie)o,(Expressie)o2);}
        {if (true) return new Integraal((Expressie) o,(Expressie)o2,(Expressie)o3,(Expressie)o4);}
      break;
    case LOG:
      jj_consume_token(LOG);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(RPAR);
  {if (true) return new Ln( (Expressie) o);}
      break;
    case PI:
      jj_consume_token(PI);
                {if (true) return new PI();}
      break;
    case SEC:
      jj_consume_token(SEC);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(RPAR);
  {if (true) return new Secans( (Expressie) o);}
      break;
    case SIN:
      jj_consume_token(SIN);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(RPAR);
  {if (true) return new Sinus( (Expressie) o);}
      break;
    case SQRT:
      jj_consume_token(SQRT);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(RPAR);
        {if (true) return new Wortel( (Expressie) o );}
      break;
    case SUM:
      jj_consume_token(SUM);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(KOMMA);
      o2 = expr();
      jj_consume_token(KOMMA);
      o3 = expr();
      jj_consume_token(KOMMA);
      o4 = expr();
      jj_consume_token(LPAR);
        {if (true) return new Sigma((Expressie) o,(Expressie)o2,(Expressie)o3,(Expressie)o4);}
      break;
    case TAN:
      jj_consume_token(TAN);
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(RPAR);
  {if (true) return new Tangens( (Expressie) o);}
      break;
    case ARBINT:
      jj_consume_token(ARBINT);
      jj_consume_token(LPAR);
      tok = jj_consume_token(CONSTANT);
      jj_consume_token(RPAR);
        {if (true) return new BasisExpressie("N$s" + tok.image + "@");}
      break;
    case ARBCOMPLEX:
      jj_consume_token(ARBCOMPLEX);
      jj_consume_token(LPAR);
      tok = jj_consume_token(CONSTANT);
      jj_consume_token(RPAR);
        {if (true) return new BasisExpressie("0.7654321");}
      break;
    case LIMIT:
      tok = jj_consume_token(LIMIT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case UP:
      case DOWN:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case UP:
          tok = jj_consume_token(UP);
          break;
        case DOWN:
          tok = jj_consume_token(DOWN);
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      jj_consume_token(LPAR);
      o = expr();
      jj_consume_token(KOMMA);
      o2 = expr();
      jj_consume_token(KOMMA);
      o3 = expr();
      jj_consume_token(RPAR);
                int dir = 0;
                if(tok.kind== UP) dir = 2;
                if(tok.kind == DOWN) dir = 1;
                {if (true) return new Limiet( (Expressie) o, (Expressie) o2, (Expressie)o3, new BasisExpressie(dir));}
      break;
    case ID:
      name = id();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LPAR:
        jj_consume_token(LPAR);
            args = new Vector();
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case MINUS:
        case LPAR:
        case LBC:
        case CONSTANT:
        case DECFLOAT:
        case ABS:
        case ACOS:
        case ASIN:
        case ATAN:
        case BIN:
        case CSC:
        case COS:
        case COT:
        case DIFF:
        case E:
        case FAC:
        case INFINITY:
        case INT:
        case LOG:
        case PI:
        case SQRT:
        case SIN:
        case SEC:
        case SUM:
        case TAN:
        case ARBINT:
        case ARBCOMPLEX:
        case LIMIT:
        case ID:
          o = expr();
            args.addElement(o);
          label_4:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case KOMMA:
              ;
              break;
            default:
              jj_la1[14] = jj_gen;
              break label_4;
            }
            jj_consume_token(KOMMA);
            o = expr();
              args.addElement(o);
          }
          break;
        default:
          jj_la1[15] = jj_gen;
          ;
        }
        jj_consume_token(RPAR);

        break;
      default:
        jj_la1[16] = jj_gen;
        ;
      }
          {if (true) return new BasisExpressie(name);}
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public MPReduceParserTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[18];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0xfc0000,0xfc0000,0x2000000,0x6000,0x6000,0x18000,0x18000,0x20000,0xa4004000,0x10000000,0xa4004000,0x10000000,0x0,0x0,0x10000000,0xa4004000,0x4000000,0xa4000000,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x4ffbfff1,0x0,0x4ffbfff1,0x0,0x30000000,0x30000000,0x0,0x4ffbfff1,0x0,0x4ffbfff1,};
   }

  /** Constructor with InputStream. */
  public MPReduceParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MPReduceParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new MPReduceParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public MPReduceParser(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new MPReduceParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public MPReduceParser(MPReduceParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(MPReduceParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 18; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List jj_expentries = new java.util.ArrayList();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[63];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 18; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 63; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = (int[])jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
